# krpsim

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .safety-project.ini  AGENTS.md  LICENSE  Lois de Murphy.KRPSIM.txt  Makefile  README.md  author  codecov.yml  coverage.xml  graph_config_ikea.json  graph_config_simple.json  install.txt  junit.xml  log.txt  pyproject.toml  trace.txt
.github/workflows/: ci.yml  version-badge.yml
docs/: AGENTS.md  WBS_krpsim.txt  pipeline.md
docs/badges/: version.json
gantt_project/: build_graph_config.py  gantt.py
krpsim/: __init__.py  cli.py  verifier_cli.py
resources/: best  custom_finite  custom_infinite  duplicate_entries  exponential  ikea  invalid_bad_process  invalid_bad_stock  large_numbers  missing_input  multi_output_chain  pomme  recre  self_gen  steak  stress_gantt_overflow_bottom  stress_gantt_overflow_right  stress_lexicographic_finite  stress_multi_objective  unreachable_target  zero_delay  zero_initial
src/krpsim/: __init__.py  cli.py  display.py  optimizer.py  parser.py  simulator.py  verifier.py  verifier_cli.py
src/krpsim_verif/: __init__.py  cli.py  verifier.py
src/logger/: analysis_log_krpsim.py
tests/: __init__.py  test_cli.py  test_display.py  test_graph_pipeline.py  test_parser.py  test_parser_hypothesis.py  test_simulator.py  test_verifier.py  test_version.py
