[tool.poetry]
name = "krpsim"
version = "0.1.0"
description = "Template repository for Python projects using Poetry"
authors = ["Rafael Verissimo <raveriss@example.com>"]
license = "MIT"
packages = [
    { include = "krpsim", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
isort = "*"
ruff = "*"
radon = "*"
bandit = "*"
safety = "*"
flake8 = "*"
xenon = "*"
coverage = "*"
pytest = "*"
pytest-cov = "*"
codecov = "*"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501"]

[tool.radon]
cc_min = "C"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.poetry.scripts]
rubix = "krpsim.main:main"
