[build-system]
requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning[plugin]>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "krpsim"
version = "0.1.0"  # Si tu utilises dynamic-versioning, tu peux virer cette ligne
description = "Simulation et vérification de graphes de processus pour la gestion de ressources"
authors = ["raveriss <raveriss@example.com>"]
license = "MIT"
packages = [{ include = "krpsim", from = "src" }]
readme = "README.md"
repository = "https://github.com/raveriss/krpsim"
homepage = "https://github.com/raveriss/krpsim"
keywords = ["simulation", "processus", "graphes", "ressources"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytest     = "^8.2.0"
pytest-cov = "^5.0.0"
ruff       = "^0.0.281"
radon      = "^5.1.0"
bandit     = "^1.7.0"
safety     = "^2.3.1"
mypy       = "^1.8.0"
pre-commit = "^3.6.0"
packaging = ">=23.1"
xenon = "^0.9.3"

[tool.poetry.scripts]
krpsim = "krpsim.cli:main"
krpsim-verif = "krpsim.verifier_cli:main"

[tool.poetry-dynamic-versioning]
enable = true
